Create plugins under Heroku directory.
Move and rename all modules to live under the Heroku directory. This is
better organizationally than having all the modules named HerokuXXXX.

--- a/corpus/release/dist.ini
+++ b/corpus/release/dist.ini
@@ -12,4 +12,4 @@ copyright_year   = 2009
 [Git::CommitBuild]
 branch = heroku_release/%b
 message = Build results of %h (on %b)
-[HerokuRelease]
+[Heroku::Release]
